<resources>
    <string name="app_name">MobileGarage</string>
    <string name="loading">Loading…</string>
    <!--  drawer  -->
    <string name="drawer_user_name">User name</string>
    <string name="drawer_user_image_description">User image</string>
    <string name="drawer_option_contacts">Contacts</string>
    <string name="drawer_option_gira">Gira</string>
    <string name="drawer_option_map">Map</string>
    <string name="drawer_option_traffic">Traffic</string>
    <string name="drawer_option_settings">Settings</string>
    <string name="drawer_option_log_out">Log out</string>
    <string name="others">Others</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <!--  nav bar  -->
    <string name="nav_bar_my_vehicles">My Vehicles</string>
    <string name="nav_bar_favorites">Favorites</string>
    <string name="nav_bar_home">Home</string>
    <string name="nav_bar_park_me_now">Park Me Now</string>
    <string name="nav_bar_profile">Profile</string>
    <!--  hints  -->
    <string name="hint_user_name">User name</string>
    <string name="hint_password">Password</string>
    <!--  buttons  -->
    <string name="button_text_register">Register</string>
    <string name="button_text_log_in">Log In</string>
    <string name="button_forget_password">Forget password?</string>

    <!-- Contact Activity -->
    <string name="contact_service_station">Service Station</string>
    <string name="contact_name_saldanha">Loja do Cidadão do Saldanha</string>
    <string name="contact_address_saldanha">Mercado 31 de Janeiro, Rua Engenheiro Vieira da Silva</string>
    <string name="contact_timetable_saldanha">TimeTable: Monday to Friday - 9h00 to 19h00</string>

    <string name="contact_name_laranjeiras">Loja do Cidadão das Laranjeiras</string>
    <string name="contact_address_laranjeiras">Rua Abranches Ferrão, 10</string>
    <string name="contact_timetable_laranjeiras">TimeTable: Monday to Friday - 8h30 to 19h30\n Saturday: 09h30 to 15h00</string>

    <string name="contact_name_lisboa">Edifício central do Município de Lisboa</string>
    <string name="contact_address_lisboa">Campo Grande, 25</string>
    <string name="contact_timetable_lisboa">TimeTable: Monday to Friday - 9h00 to 19h00</string>

    <string name="contact_towed_vehicles">Towed Vehicles</string>
    <string name="contact_removed_vehicles">Park of Towed Vehicles</string>
    <string name="contact_address_removed_vehicles">Rua Francisco Lyon de Castro</string>
    <string name="contact_email_removed_vehicles">parque.rebocados@emel.pt</string>
    <string name="contact_timetable_removed_vehicles">EveryDay: 8h to 24h</string>
    <string name="contact_info_removed_vehicles">
Free SMS to the number 3838, indicating the word "Reboque" followed by a space and the plate number of the car (with or without dashes between the characters).
    </string>

    <string name="contact_general_vehicles">General</string>
    <string name="contact_phone_general_vehicles">+351 211163060 </string>
    <string name="contact_fax_general_vehicles">+351 217813699</string>
    <string name="contact_timetable_general_vehicles"> Monday to Friday - 8h00 to 20h00\nSaturday - 9h00 to 15h00</string>
    <string name="contact_info_general_vehicles">To Contact Us, use the Client Area</string>

    <string name="contact_blocked_vehicles">Blocked Vehicles</string>
    <string name="contact_phone_blocked_vehicles">+351 217803131</string>
    <string name="contact_timetable_blocked_vehicles"> Monday to Friday - 8h00 to 24h00\nSaturday, Sundays and Holiday - 9h00 to 18h00</string>

    <string name="description_icon_map">Map Icon</string>
    <string name="description_icon_call">Call Icon</string>
    <string name="description_icon_info">Info Icon</string>
    <string name="description_icon_email">Email Icon</string>
    <string name="description_icon_fax">Fax Icon</string>
    <string name="description_icon_clock">Clock Icon</string>
    <string name="description_icon_park">Park Icon</string>

    <!--  vehicle details  -->
    <string name="vehicle_detail_is_parked">Is parked?</string>
    <string name="vehicle_detail_plate">Plate</string>
    <string name="vehicle_detail_insurance">Insurance paid?</string>
    <string name="vehicle_detail_brand">Brand</string>
    <string name="vehicle_detail_model">Model</string>
    <string name="vehicle_detail_year">Year</string>

    <!-- Park details -->
    <string name="park_details_name">Park name</string>
    <string name="park_details_address">Park address</string>
    <string name="park_details_last_update">Last Update</string>
    <string name="park_details_distance">Distance</string>
    <string name="park_details_park_type">Type</string>
    <string name="park_details_availability">Availability</string>
    <string name="park_details_nr_parks">Nr. Parks</string>
    <string name="park_details_acessability">Acessible for passengers with disabilities</string>

    <!--  profile  -->
    <string name="profile_name">Profile name</string>
    <string name="profile_b_day_title">Date of birth</string>
    <string name="profile_b_day">DD/MM/AAAA</string>
    <string name="profile_license_cat_title">License cat</string>
    <string name="profile_license_cat">Cat</string>
    <string name="profile_locality_title">Location</string>
    <string name="profile_locality">Locality</string>
    <string name="profile_number_of_vehicles_title">Nº vehicles</string>
    <string name="profile_number_of_vehicles">Vehicles</string>
    <string name="profile_edit_button">Edit profile</string>
    <string name="profile_monthly_average_spent_title">Monthly avg. spent</string>
    <string name="profile_monthly_average_spent">Monthly avg. spent</string>
    <string name="profile_emel_support">EMEL support</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
