<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <item
        android:id="@+id/nav_bar_my_vehicles"
        android:icon="@drawable/ic_directions_car_black_24dp"
        android:title="@string/nav_bar_my_vehicles"
        />

    <item
        android:id="@+id/nav_bar_favorites"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:title="@string/nav_bar_favorites"
        />

    <item
        android:id="@+id/nav_bar_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/nav_bar_home"

        />

    <item
        android:id="@+id/nav_bar_park_me_now"
        android:icon="@drawable/ic_local_parking_black_24dp"
        android:title="@string/nav_bar_park_me_now"
        />

    <item
        android:id="@+id/nav_bar_profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/nav_bar_profile"
        />

</menu>