<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginVertical="10dp"
    tools:context="pt.ulusofona.ecati.deisi.licenciatura.cm1920.grupo17.ui.fragments.ServiceVehiclesFragment"
    android:weightSum="16"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/contact_removed_vehicles"
        android:textSize="20sp"
        android:layout_margin="12sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical"
        android:weightSum="3"
        android:layout_marginHorizontal="20dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="10"
            >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/description_icon_map"
                android:gravity="center"
                app:srcCompat="@drawable/ic_map" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="9"
                android:layout_marginStart="10dp"
                android:gravity="center_vertical"
                android:text="@string/contact_address_removed_vehicles"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="10"
            >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/description_icon_email"
                android:gravity="center"
                app:srcCompat="@drawable/ic_email" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:layout_marginStart="10dp"
                android:gravity="center_vertical"
                android:text="@string/contact_email_removed_vehicles"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="10"
            >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_time"
                android:contentDescription="@string/description_icon_clock"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="9"
                android:layout_marginStart="10dp"
                android:gravity="center_vertical"
                android:text="@string/contact_timetable_removed_vehicles"
                />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/contact_blocked_vehicles"
        android:textSize="20sp"
        android:layout_margin="12sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical"
        android:weightSum="2"
        android:layout_marginHorizontal="20dp"
        >

        <LinearLayout
            android:id="@+id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="10"
            >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_call"
                android:contentDescription="@string/description_icon_call"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:layout_marginStart="10dp"
                android:gravity="center_vertical"
                android:text="@string/contact_phone_blocked_vehicles"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="10"
            >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_time"
                android:contentDescription="@string/description_icon_clock"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="9"
                android:layout_marginStart="10dp"
                android:gravity="center_vertical"
                android:text="@string/contact_timetable_blocked_vehicles"
                />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/contact_info_removed_vehicles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:gravity="center_vertical"
        android:text="@string/contact_info_removed_vehicles"
        android:onClick="OnClickSMS"
        />

</LinearLayout>