<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:orientation="horizontal"
    android:weightSum="2"
    android:layout_marginVertical="5dp"
    >

   <ImageView
       android:id="@+id/vehicle_image"
       android:layout_width="0dp"
       android:layout_height="match_parent"
       android:src="@mipmap/mustang_shelby_gt500"
       android:layout_weight="1"
       />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:weightSum="3"
        >

        <TextView
            android:id="@+id/is_parked"
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="1"
            android:text="@string/vehicle_detail_is_parked"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/insurance_paid"
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="1"
            android:text="@string/vehicle_detail_insurance"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/plate"
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="1"
            android:text="@string/vehicle_detail_plate"
            android:gravity="center"
            />

    </LinearLayout>

</LinearLayout>