<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginHorizontal="15dp"
    android:weightSum="5"
    tools:context=".ui.fragments.ParkDetailsFragment"
    >

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_gravity="center"
        app:srcCompat="@drawable/ic_local_parking_black_24dp"
        android:contentDescription="@string/description_icon_park"
        />

    <!-- Field Description Park-->
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            >

            <TextView
                android:id="@+id/park_details_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/park_details_name"
                android:textSize="24sp"
                android:textStyle="bold"
                />


            <TextView
                android:id="@+id/park_details_address"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/park_details_address"
                android:textSize="20sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/park_details_last_update"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/park_details_last_update"
                android:textSize="18sp"
                android:textStyle="bold"
                />

        </LinearLayout>

    <!-- Field Distance & Type-->
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:weightSum="2"
            >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:text="@string/park_details_distance"
                    />

                <TextView
                    android:id="@+id/park_details_distance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:text="@string/park_details_distance"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:text="@string/park_details_park_type"
                    />

                <TextView
                    android:id="@+id/park_details_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:text="@string/park_details_park_type"
                    />

            </LinearLayout>

        </LinearLayout>

    <!-- Field NrParks & Availability-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:weightSum="2"
        >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:gravity="center"
                android:textSize="22sp"
                android:textStyle="bold"
                android:text="@string/park_details_nr_parks"
                />

            <TextView
                android:id="@+id/park_details_nr_parks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:gravity="center"
                android:textSize="20sp"
                android:text="@string/park_details_nr_parks"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:gravity="center"
                android:textSize="22sp"
                android:textStyle="bold"
                android:text="@string/park_details_availability"
                />

            <TextView
                android:id="@+id/park_details_availability"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:gravity="center"
                android:textSize="20sp"
                android:text="@string/park_details_availability"
                />

        </LinearLayout>

    </LinearLayout>

    <!-- Field Acessability-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/park_details_acessability"
        android:layout_margin="15dp"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/park_details_availability_nr_parks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/park_details_nr_parks"
        android:layout_marginHorizontal="15dp"
        android:gravity="center"
        />

</LinearLayout>
